preview-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: helloworld-preview
  labels:
    app: helloworld2
spec:
  ports:
  - port: 8080
  selector:
    app: helloworld2
  type: LoadBalancer
