svc.yml
kind: Service
apiVersion: v1
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  ports:
  - port: 8080
  selector:
    app: helloworld
  type: NodePort
