ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: helloworld
  namespace: default
  labels:
    app: helloworld
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.provider: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '15'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
spec:
  rules:
    - host: helloworld.192.168.64.5.nip.io
      http:
        paths:
          - path: /hello
            backend:
              serviceName: helloworld
              servicePort: 8080
